@startuml Event Sourced service - Synchronous API

!include styling.puml

interface IEquatable<Entity> {
    bool Equals(TId other)
}

interface IEntity {
    TId Id { get; }
}

interface IAggregateRoot {
    bool IsNew { get; }
    bool IsValid { get; }
    uint Version { get; set; }
    void EnsureConsistency();
    void AddBusinessRuleViolation(string violation);
    IEnumerable<string> GetBusinessRuleViolations();
    IEnumerable<Event> GetDomainEvents();
}

class Entity {
    # {abstract} string Id { get; }
    + override bool Equals(object? obj)
    + {abstract} virtual bool Equals(IEntity? other)
    + override int GetHashCode()
    + {static} bool operator ==(Entity left, Entity right)
    + {static} bool operator !=(Entity left, Entity right)
}

class AggregateRoot {
    - List<string> _businessRuleViolations
    # List<Event> _domainEvents
    + bool IsNew
    + bool IsValid
    + uint Version

    + AggregateRoot()
    + AggregateRoot(uint originalVersion)
    + AggregateRoot(IList<Event> domainEvents)
    + IEnumerable<Event> GetDomainEvents()
    + void AddDomainEvents(Event domainEvent)
    + void AddBusinessRuleViolation(string violation)
    + IEnumerable<string> GetBusinessRuleViolations()
    # void ApplyDomainEvent(Event domainEvent)
    # {abstract} bool TryHandleDomainEvent(Event domainEvent)
    + virtual void EnsureConsistency()
}

class Contract {
    + override string Id { get; }
    + ContractNumber ContractNumber
    + CustomerNumber? CustomerNumber
    + ProductNumber? ProductNumber
    + MoneyAmount? Amount
    + Duration? ContractTerm
    + PaymentPeriod PaymentPeriod
    + bool Cancelled
    
    + Contract()
    + Contract(IList<Event> domainEvents)
    + ValueTask RegisterContractAsync()
    + ValueTask ChangeContractAmount()
    + ValueTask ChangeContractTerm()
    + ValueTask CancelContract()
    # override bool TryHandleDomainEvent(Event domainEvent)
    - void Handle(ContractRegisteredV2 domainEvent)
    - void Handle(ContractAmountChanged domainEvent)
    - void Handle(ContractTermChanged domainEvent)
    - void Handle(ContractCancelled domainEvent)
    - Task EnsureExistingProduct(string productNumber, IProductService productService)
    - Task EnsureExistingCustomer(string customerNumber, ICustomerService customerServ
    - void EnsureNotCancelled()
    - void EnsureValidAmount(decimal amount)
    - void EnsureValidTerm(DateTime startDate, DateTime endDate)
    - void EnsureValidTermForCancellation()
    + override void EnsureConsistency()
}

AggregateRoot <|-- Contract
Entity <|-- AggregateRoot
IAggregateRoot <|-- AggregateRoot
IEquatable <|-- IEntity
IEntity <|-- Entity
IEntity <|-- IAggregateRoot

@enduml